# Sanntidsprogrammering-Heis-2-

./: Go_syntax_notes.md
Exercises/Exercise 1 (Andreas)/: questions.md  result.md
Project/: Cargo.toml  README.md  comments_Markus.md
Project/Networking/First_draft/: Cargo.toml
Project/Networking/First_draft/src/: config.rs  main.rs  master.rs  message_variables.rs  networking.rs  slave.rs
Project/Networking/Second_draft/driver-rust-master/: Cargo.toml
Project/Networking/Second_draft/driver-rust-master/src/: lib.rs  main.rs
Project/Networking/Second_draft/driver-rust-master/src/config/: config.rs
Project/Networking/Second_draft/driver-rust-master/src/distributor/: distributor.rs  receiver.rs  transmitter.rs
Project/Networking/Second_draft/driver-rust-master/src/elevator_controller/: direction.rs  elevator_fsm.rs  fsm.rs  orders.rs
Project/Networking/Second_draft/driver-rust-master/src/network/: receiver.rs  udp.rs
Project/Networking/Second_draft/driver-rust-master/src/offline_order_handler/: offline_order_handler.rs
Project/src/: lib.rs  main.rs
Project/src/config/: config.rs  fetch_arguments.rs
Project/src/cost_function/: cost_function.rs
Project/src/distributor/: all_orders.rs  distributor.rs  receiver.rs  transmitter.rs  udp_message.rs
Project/src/elevator/: doors.rs  elevator_fsm.rs  lights.rs  orders.rs  state.rs
Project/src/elevator_controller/: direction.rs  doors.rs  elevator_fsm.rs  elevator_fsm_functions.rs  lights.rs  orders.rs  state.rs
Project/src/elevio/: elev.rs  poll.rs
Project/src/network/: udp.rs
(+54 files in other folders)
