[package]
name = "driver-rust"
version = "0.1.0"
authors = ["Anders Petersen <klasbo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num2words = "1.2.0"


[lib]
name = "driver_rust"
path = "src/lib.rs"

[[bin]]
name = "driver-rust"
path = "src/main.rs"

[[bin]]
name = "offline_order_handler"
path = "src/offline_order_handler/offline_order_handler.rs"
